--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
     }
   ],
   "minimum-stability": "dev",
-  "require": {},
+  "require": {
+    "laravelcollective/html": "^5.5"
+  },
   "autoload": {
     "psr-4": {
       "drhd\\inbox\\": "src/"
